[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Bars/ChargeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Counters/FireBallCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Bars/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/logic/HUD.gd" type="Script" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = 9.0
margin_right = 164.0

[node name="ChargeBar" parent="." instance=ExtResource( 1 )]
margin_left = 178.0
margin_right = 333.0

[node name="FireBallCounter" parent="." instance=ExtResource( 2 )]
margin_left = 11.0
margin_top = 58.0
margin_right = 69.0
margin_bottom = 83.0
